--- a/index.html
+++ b/index.html
@@ -7,10 +7,74 @@
     <link rel="stylesheet" href="./css/style.css"/>
 </head>
 <body>
+    <header>
+        <p>Product Page</p>
+    </header>
+    <main>
+        <div id="search">
+           <input placeholder="Search name" id="search-input" type="text"/>
+           <div>
+            <button class="filter">All</button>
+            <button class="filter">Tech</button>
+            <button class="filter">Clothing</button>
+            <button class="filter">Health</button>
+           </div>
+           <div>
+            <input placeholder="Search price" type="number"/>
+            <button>Search</button>
+           </div>
+        </div>
+        <div id="products">
+            <div class="product-item">
+                <img src="./img/iphone.png"/>
+                <p>Apple iphone 14 pro</p>
+                <span>$ 1499</span>
+            </div>
+            <div class="product-item">
+                <img src="./img/shoes.png"/>
+                <p>Running shoes</p>
+                <span>$ 199</span>
+            </div>
+            <div class="product-item">
+                <img src="./img/watch.png"/>
+                <p>Apple watch</p>
+                <span>$ 399</span>
+            </div>
+            <div class="product-item">
+                <img src="./img/bag.png"/>
+                <p>College Bag</p>
+                <span>$ 139</span>
+            </div>
+            <div class="product-item">
+                <img src="./img/jacket.png"/>
+                <p>Boy's Jacket</p>
+                <span>$ 169</span>
+            </div>
+            <div class="product-item">
+                <img src="./img/shampoo.png"/>
+                <p>Keratin Hair Care</p>
+                <span>$ 39</span>
+            </div>
+            <div class="product-item">
+                <img src="./img/airpods.png"/>
+                <p>Apple airpods pro</p>
+                <span>$ 299</span>
+            </div>
+            <div class="product-item">
+                <img src="./img/vitamin.png"/>
+                <p>Vitamin E</p>
+                <span>$ 39</span>
+            </div>
+            <div class="product-item">
+                <img src="./img/cream.png"/>
+                <p>Face Cream</p>
+                <span>$ 39</span>
+            </div>
+        </div>
+    </main>
 
 
 
     <script src="./js/app.js"></script>
-    
 </body>
 </html>
